--- a/src/assets/css/page-service.sass
+++ b/src/assets/css/page-service.sass
@@ -63,7 +63,8 @@
    +size-xl(12)   
    +shift-xl-left(0)   
    &__title
-
+      h2
+         +font-h1()
    &__logos
       +row-flex()
 .partner-logo
@@ -182,7 +183,7 @@
    display: flex
    flex-direction: column
    &__title
-      font: $h2
+      +font-h2()
    &__persone
       margin: 36px 0px 24px 0px
 
