--- a/src/assets/gblocks/analyzing/analyzing.sass
+++ b/src/assets/gblocks/analyzing/analyzing.sass
@@ -8,9 +8,9 @@
    +margin-block()
    &__headline
       +col()
-      +size(8)
+      +size(7)
       +size-xl(12)
-      +shift-left(1)
+      +shift-left(2)
       +shift-xl-left(0)
       margin-bottom: 52px
    &__items
@@ -20,39 +20,36 @@
    &:last-of-type
       margin-bottom: 0px
    h3
-      font: $h1
+      +font-h1()
       margin-bottom: 24px
    p
-      font-family: $font-text
-      font-weight: 600;
-      font-size: 24px;
-      line-height: 32px;      
+      +font-big-text()    
    &__top
       +col()
-      +size(8)
+      +size(7)
       +size-xl(12)
-      +shift-left(1)
+      +shift-left(2)
       +shift-xl-left(0)
       margin-bottom: 48px
    &__bottom
       
       h3, p
          +col()
-         +size(8)
+         +size(7)
          +size-xl(12)
-         +shift-left(1)
+         +shift-left(2)
          +shift-xl-left(0)
       p
          margin-bottom: 52px         
    &__img
       +col()
-      +size(8)
+      +size(7)
       +size-xl(12)
-      +shift-left(1)
+      +shift-left(2)
       +shift-xl-left(0)
       &_wild
          +col()
-         +size(9)
+         +size(8)
          +size-xl(12)
-         +shift-left(0)
+         +shift-left(1)
          +shift-xl-left(0)         
