--- a/src/assets/gblocks/gigantTextAndButton/gigantTextAndButton.sass
+++ b/src/assets/gblocks/gigantTextAndButton/gigantTextAndButton.sass
@@ -4,7 +4,7 @@
 @import '../../css/helpers/normalize'
 @import '../../css/helpers/lib'
    
-.gigant-text-button
+.font-gigant-button
    +col()
    +size(8)
    +size-xl(12)
