--- a/src/assets/gblocks/partner/partner.sass
+++ b/src/assets/gblocks/partner/partner.sass
@@ -10,7 +10,8 @@
    +size-xl(12)   
    +shift-xl-left(0)   
    &__title
-
+      h2
+         +font-h1()
    &__logos
       +row-flex()
 .partner-logo
