--- a/src/assets/gblocks/whatDoYouGet/whatDoYouGet.sass
+++ b/src/assets/gblocks/whatDoYouGet/whatDoYouGet.sass
@@ -25,10 +25,7 @@
       -webkit-background-clip: text
       margin-bottom: 12px
    &__description
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 33px;
-      font-family: $font-text
+      +font-h3()
    &__bottom
       +col()
       +size(6)
@@ -47,12 +44,11 @@
          +col()
          +u-size(2,6, 20px)   
          +size-md(12)
-      h3
-         font: $h2      
-         margin-bottom: 40px
+      h3 
+         +font-h2()
+         margin-bottom: 24px        
    &__text
-      font: $text  
+      +font-text()
       color: #A3A3A3;    
-      line-height: 1.5  
 
 
