--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -19,23 +19,16 @@
    +size-xl(5)
    +shift-xl-left(0)
    &__tag
-      font-size: 16px
-      line-height: 22px
+      +font-text()
    &__title
-      font-weight: bold
-      font-size: 44px
-      line-height: 120%
-      margin-bottom: 14px
+      +font-h1()
+      margin-bottom: 12px
    &__client
-      font-weight: 600
-      font-size: 24px
-      line-height: 132%
+      +font-h3()
       margin-bottom: 24px
    &__description
-      font-weight: normal
-      font-size: 16px
-      line-height: 22px
-      margin-bottom: 30px
+      +font-text()
+      margin-bottom: 24px
       +u-size(3,4,0px)
 
 .main-project-container
@@ -74,21 +67,15 @@
    &:first-child
       margin: 0px 0px 50px
    &__img
-
+      margin-bottom: 12px
       img
          border-radius: 10px
    &__tag
-      font-size: 16px
-      line-height: 22px
+      +font-text()
    &__title
-      font-weight: bold
-      font-size: 28px
-      line-height: 120%
-      margin-bottom: 14px
-
+      +font-h1()
+      margin-bottom: 12px
    &__description
-      font-weight: normal
-      font-size: 14px
-      line-height: 22px
-      margin-bottom: 30px
+      +font-text()
+      margin-bottom: 24px
    &__button
