--- a/src/assets/css/blocks/service-section.sass
+++ b/src/assets/css/blocks/service-section.sass
@@ -3,7 +3,7 @@
    &__title
       +row-flex()
       align-items: baseline
-      margin-bottom: $offset-block / 2 
+      margin-bottom: $offset-block / 3 
    &__button
       +col()
       +size(2)
@@ -74,13 +74,8 @@
 
    &__title
       margin-bottom: 40px
-      h4
-         font-size: 32px
-         line-height: 44px
-         font-weight: bold
-         font-family: $font-text
    &__description
-      font: $text
+      +font-text()
       margin-bottom: 20px
    &__icon
       display: flex
@@ -171,13 +166,10 @@
       width: 100%
       height: 100%
    &__title
-      margin-bottom: 40px
-      font-size: 32px
-      line-height: 44px
-      font-weight: bold
-      font-family: $font-text
+      +font-h2()
+      margin-bottom: $offset-block / 3
    &__description
-      font: $text
+      +font-text()
       margin-bottom: 20px
    &__icon
       display: flex
