--- a/src/assets/css/fonts.sass
+++ b/src/assets/css/fonts.sass
@@ -1,6 +1,11 @@
+@import 'vars'
+
 @mixin font($f-name, $f-style, $f-weight, $f-url)
    @font-face
       font-family: $f-name
       font-style: $f-style
       font-weight: $f-weight
       src: url($f-url) format('woff2')
+
+
+
