--- a/src/assets/gblocks/leadService/leadService.sass
+++ b/src/assets/gblocks/leadService/leadService.sass
@@ -21,14 +21,13 @@
       margin-bottom: 32px
         
    &__number
-
+      +font-super-gigant()
    &__description
-      font: $h2
+      +font-h2()
 
    &__text
-      font: $h1
+      +font-h1()
       +col()
       +u-size(5, 8, 20px)
-      +size-md(12)
-      line-height: 1.1
+      +size-md(12)      
 
