--- a/src/assets/gblocks/stepblock/stepblock.sass
+++ b/src/assets/gblocks/stepblock/stepblock.sass
@@ -75,6 +75,8 @@
    &__title
       +font-h1()
       margin-bottom: 36px;
+      +md-block()
+         margin-bottom: 16px;
    &__description
       +font-h3()
    &__list
