--- a/src/assets/gblocks/textAndGif/textAndGif.sass
+++ b/src/assets/gblocks/textAndGif/textAndGif.sass
@@ -18,6 +18,8 @@
    +row-flex()
    margin-bottom: 100px
    transition: all .3s $transition
+   +md-block()
+      margin-bottom: 52px
    &:hover .text-and-gif-item__gif img
       opacity: 1
       top: 0px
