--- a/src/assets/gblocks/quote/quote.sass
+++ b/src/assets/gblocks/quote/quote.sass
@@ -8,6 +8,8 @@
 
    &__text
       margin-bottom: 72px
+      +md-block()
+         margin-bottom: 32px
       h2
          -webkit-text-fill-color: transparent
          -webkit-background-clip: text
