--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -12,12 +12,15 @@
    display: flex
    flex-direction: column
    justify-content: center
+   position: relative
+   
    +col()
    +size(4)
    +shift-right(7)
    +shift-left(1)
    +size-xl(5)
    +shift-xl-left(0)
+
    &__tag
       +font-text()
    &__title
@@ -30,6 +33,17 @@
       +font-text()
       margin-bottom: 24px
       +u-size(3,4,0px)
+   &__content
+      position: relative  
+      transition: all 0.3s $transition  
+      &:hover
+         opacity: 0.5  
+   &__link
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0    
+
 
 .main-project-container
    height: 100vh
@@ -55,6 +69,12 @@
       flex-shrink: 0
       width: 100%
       background-size: cover
+      display: flex
+      justify-content: center
+      align-items: center      
+      img
+         z-index: 99
+         width: 90%
 
 // mobile
 .main-project-mobile
