--- a/src/assets/css/blocks/naviagtion.sass
+++ b/src/assets/css/blocks/naviagtion.sass
@@ -36,21 +36,27 @@
       align-items: center
       padding-right: 20px
       position: relative
+      transition: all 0.3s $transition
       a
          position: absolute
          width: 100%
          height: 100%
          top: 0
+      &:hover
+         transform: translateY(-2px)
    &__picture
       width: 44px
-      padding: 1px
-      background-image: linear-gradient(180deg, #FF403C 0%, #00284B 100%)
+      // padding: 1px
+      // background-image: linear-gradient(180deg, #FF403C 0%, #00284B 100%)
       border-radius: 1000px
+      
       img
          display: block
    &__title
       padding: 10px 0px 0px
-      font: $small-text
+      font-family: $font-headline
+      font-weight: bold
+      font-size: 12px
       color: $white
 
 .navigation
@@ -77,6 +83,7 @@
          a
             font-weight: bold
             padding: 10px 0px
+            +font-text-bold()
 
    &__post
       display: flex
@@ -178,6 +185,6 @@
          padding: 30px
          margin: 0xp
          a
-            padding: 30px
-            font: $h4
+            padding: 30px            
             color: $white
+            +font-h4()
