--- a/src/assets/css/single-project.sass
+++ b/src/assets/css/single-project.sass
@@ -27,3 +27,52 @@
          font-size: 16px
          font-family: $font-text
          font-weight: 700
+
+.more-project
+   +col()
+   +size(10)
+   +shift-left(1)
+   +size-xl(12)
+   +shift-xl-left(0)
+
+   &__content   
+      +row-flex()
+      h3
+         +col()
+         +size(10)
+         margin-bottom: $offset-block / 2
+
+.more-project-post            
+   +col()
+   +u-size(3, 11, 20px)
+   +size-md(6)
+   height: 300px
+   border-radius: 10px
+   background-size: cover
+   background-repeat: no-repeat
+   background-position: center center
+   display: flex
+   align-items: flex-end
+   padding: 24px
+   position: relative
+   transition: all 0.3s $transition
+   margin-bottom: 20px
+   &:hover
+      transform: translateY(-3px)
+   a
+      position: absolute
+      height: 100%
+      width: 100%
+   &__title
+      +font-h3()
+
+.all-project
+   +col()
+   +u-size(2, 11, 20px)
+   +size-md(6)
+   background: linear-gradient(90deg, #F857A6 0%, #FF5858 100%);
+   border-radius: 10px;
+   display: flex
+   align-items: flex-end   
+   padding: 24px
+   height: 300px
