--- a/src/assets/gblocks/bigform/bigform.sass
+++ b/src/assets/gblocks/bigform/bigform.sass
@@ -23,7 +23,7 @@
       @include xl-block
          margin-bottom: 32px
          width: 100%            
-      input
+      span
          margin-right: 20px
          @include md-block
             margin-bottom: 24px
