--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -36,8 +36,8 @@
    &__content
       position: relative  
       transition: all 0.3s $transition  
-      &:hover
-         opacity: 0.5  
+      &:hover .button
+         background: $architect-red  
    &__link
       position: absolute
       width: 100%
