--- a/src/assets/css/blocks/main-slider.sass
+++ b/src/assets/css/blocks/main-slider.sass
@@ -1,5 +1,6 @@
-.main-slider
-
+#main-slider 
+   position: relative
+.main-slider   
    &__item
       height: $fix100vh
       min-height: 650px
@@ -17,7 +18,7 @@
       width: 100%
       height: 100%
       background-color: #000
-      opacity: 0.5
+      opacity: 0.2
       top: 0         
    &__wrapper
       +wrapper()
