--- a/src/assets/css/blocks/naviagtion.sass
+++ b/src/assets/css/blocks/naviagtion.sass
@@ -188,3 +188,7 @@
             padding: 30px            
             color: $white
             +font-h4()
+   &__contact
+      a
+         padding: 5px
+         +font-small-text()         
