--- a/src/assets/gblocks/partner/partner.sass
+++ b/src/assets/gblocks/partner/partner.sass
@@ -8,11 +8,15 @@
          +font-h1()
    &__logos
       +row-flex()
+   &_main
+      +size(10)
+      +shift-left(1)
 .partner-logo
    +col()
    +size(2)
    +size-xl(2)
    +size-md(6)
-
+   &_main
+      +u-size(2, 10, 20px)
 
 
