--- a/src/assets/css/blocks/service-section.sass
+++ b/src/assets/css/blocks/service-section.sass
@@ -127,7 +127,7 @@
       +u-size(2, 10, 20px)
       +size-xl(3)
       +size-md(6) 
-      +size-sm(6)
+      +size-sm(12)
       margin-bottom: 24px
       display: flex
 .servict-item
@@ -143,11 +143,11 @@
    height: auto
    display: flex
    flex-direction: column
-   justify-content: space-between    
+   justify-content: space-between   
    +sm-block()
       padding: 12px 16px 
       outline-offset: 0px 
-      border: none    
+      border: none             
    &:before
       content: ''
       position: absolute
@@ -158,7 +158,7 @@
       z-index: -1
       margin: -$border
       border-radius: inherit
-      background: linear-gradient(206.56deg, #8E54E9 0%, #56B4D3 80.7%)
+      background: var(--gradient)
       opacity: 0
       transition: all .3s $transition
       +sm-block()
