--- a/src/assets/gblocks/headlineDescriptionImage/headlineDescriptionImage.sass
+++ b/src/assets/gblocks/headlineDescriptionImage/headlineDescriptionImage.sass
@@ -17,7 +17,12 @@
       +size(6)       
       +size-sm(12)
       margin-bottom: 24px
-         
+   img:first-child:nth-last-child(2n),
+   img:first-child:nth-last-child(2n) ~ img
+      +col()
+      +size(6)       
+      +size-sm(12)
+      margin-bottom: 24px
 .headline-description
    +col()   
    +size(8)
