--- a/src/assets/gblocks/whatDoYouGet/whatDoYouGet.sass
+++ b/src/assets/gblocks/whatDoYouGet/whatDoYouGet.sass
@@ -11,7 +11,7 @@
       margin-bottom: 36px
    &__subtitle
       font-size: 60px;
-      line-height: 60px;
+      line-height: 1.2;
       font-weight: bold;
       font-family: $font-headline
       -webkit-text-fill-color: transparent
