--- a/src/assets/css/blocks/main-project.sass
+++ b/src/assets/css/blocks/main-project.sass
@@ -56,6 +56,11 @@
    z-index: 999
    top: 0
    right: 0
+   -ms-overflow-style: none
+   scrollbar-width: none
+   &::-webkit-scrollbar
+      width: 0px
+      background: transparent
    &__set
       height: 100%
       width: 100%
