--- a/src/assets/gblocks/analyzing/analyzing.sass
+++ b/src/assets/gblocks/analyzing/analyzing.sass
@@ -3,7 +3,8 @@
    &__headline
       +col()
       +size(7)
-      +size-xl(12)
+      +size-xl(8)
+      +size-md(12)
       +shift-left(2)
       +shift-xl-left(0)
       margin-bottom: 52px
@@ -21,7 +22,8 @@
    &__top
       +col()
       +size(7)
-      +size-xl(12)
+      +size-xl(8)
+      +size-md(12)
       +shift-left(2)
       +shift-xl-left(0)
       margin-bottom: 48px
@@ -30,7 +32,8 @@
       h3, p
          +col()
          +size(7)
-         +size-xl(12)
+         +size-xl(8)
+         +size-md(12)
          +shift-left(2)
          +shift-xl-left(0)
       p
