--- a/src/assets/gblocks/bigform/bigform.sass
+++ b/src/assets/gblocks/bigform/bigform.sass
@@ -28,6 +28,8 @@
       input[type="submit"]
          @include md-block
             margin: 0px
+      .wpcf7            
+         margin-bottom: 12px
    &__persone
       display: flex
       align-items: center
