--- a/src/assets/gblocks/headlineDescriptionImage/headlineDescriptionImage.sass
+++ b/src/assets/gblocks/headlineDescriptionImage/headlineDescriptionImage.sass
@@ -26,9 +26,10 @@
 .headline-description
    +col()   
    +size(8)
-   +size-xl(12)   
+   +size-xl(8)   
+   +size-md(12)
    +shift-left(2)
-   +shift-xl-left(0)
+   +shift-xl-left(0)   
    &__title
       margin-bottom: 48px
       +md-block()
