--- a/src/assets/gblocks/stepblock/stepblock.sass
+++ b/src/assets/gblocks/stepblock/stepblock.sass
@@ -5,7 +5,8 @@
       h2
          +col()
          +size(8)
-         +size-xl(12)
+         +size-xl(8)
+         +size-md(12)
          +shift-left(1)
          +shift-xl-left(0)
       @include md-block
@@ -18,7 +19,8 @@
    position: relative
    +col()
    +size(7)
-   +size-xl(12)
+   +size-xl(8)
+   +size-md(12)
    +shift-left(1)
    +shift-xl-left(0)
    @include md-block
