--- a/src/assets/css/blocks/fact.sass
+++ b/src/assets/css/blocks/fact.sass
@@ -22,7 +22,7 @@
     
   &__numbers
     display: grid
-    grid-template-columns: 1.5fr 2.5fr 2fr 2.5fr
+    grid-template-columns: 2fr 2.5fr 2fr 2.5fr
     padding: 18px 50px
     align-items: center
     +lg-block()
@@ -35,15 +35,19 @@
       grid-template-columns: 1fr                 
   &__button 
     background: $gradient
-    padding: 14px 18%
+    padding: 14px 12%
     display: flex
-    align-items: center    
+    flex-direction: column
+    justify-content: center
+      
     +lg-block()
       padding: 12px 16px
     +md-block()
       justify-content: center      
+      align-items: center  
     p
-      +font-h3()
+      +font-h4()
+      margin-bottom: 12px
       +lg-block()
         font-size: 16px
       +sm-block()
@@ -56,7 +60,7 @@
       +lg-block()
         font-size: 12px
     svg 
-      transform: rotateZ(90deg)
+      // transform: rotateZ(90deg)
       +md-block()
         display: none
 .fact-number
