--- a/src/assets/css/style.sass
+++ b/src/assets/css/style.sass
@@ -628,6 +628,7 @@ footer
 @import './blocks/standard-section'
 @import './blocks/main-project'
 @import './blocks/main-blog'
+@import './blocks/partner'
 @import 'page-service'
 @import 'single-project'
 @import 'page-project'
@@ -648,4 +649,5 @@ footer
 @import '../gblocks/checkandlist/checkandlist'
 @import 'multiselect';
 @import './blocks/fact.sass'
+@import 'single-blog'
 
