--- a/src/assets/gblocks/partner/partner.sass
+++ b/src/assets/gblocks/partner/partner.sass
@@ -9,8 +9,10 @@
    &__logos
       +row-flex()
    &_main
-      +size(10)
+      +size(9)
       +shift-left(1)
+      +size-xl(12)
+      +shift-xl-left(0)
 .partner-logo
    +col()
    +size(2)
@@ -18,5 +20,6 @@
    +size-md(6)
    &_main
       +u-size(2, 10, 20px)
+      +size-md(6)
 
 
