--- a/src/assets/css/blocks/fact.sass
+++ b/src/assets/css/blocks/fact.sass
@@ -25,8 +25,9 @@
     grid-template-columns: 2fr 2.5fr 2fr 2.5fr
     padding: 18px 50px
     align-items: center
-    +lg-block()
+    +to(1440px)
       padding: 16px 20px
+      align-items: flex-start
     +sm-block()
       grid-template-columns: 1fr 1fr 
       grid-row-gap: 16px
@@ -40,7 +41,7 @@
     flex-direction: column
     justify-content: center
       
-    +lg-block()
+    +to(1440px)
       padding: 12px 16px
     +md-block()
       justify-content: center      
@@ -48,34 +49,49 @@
     p
       +font-h4()
       margin-bottom: 12px
-      +lg-block()
-        font-size: 16px
-      +sm-block()
-        text-align: center        
+      +to(1440px)
+        font-size: 14px
+      +md-block()
+        text-align: center   
+        margin-bottom: 0px
+        font-size: 16px    
+        display: flex 
+        align-items: center
+        padding: 4px
+      svg
+        display: none
+        +md-block()
+          display: block
+          transform: rotateZ(90deg)
     small
       display: flex
       justify-content: space-between
       align-items: center
       font-size: 16px
-      +lg-block()
+      +to(1440px)
         font-size: 12px
-    svg 
-      // transform: rotateZ(90deg)
       +md-block()
         display: none
+      svg 
+        // transform: rotateZ(90deg)
+        +md-block()
+          display: none
 .fact-number
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4)
   &__title
     +font-h2()
     margin-bottom: 4px
-    +lg-block()
+    +to(1440px)
       font-size: 24px
+    +sm-block()
+      font-size: 22px
 
   &__description
     +font-h4()
-    +lg-block()
-      font-size: 16px
+    +to(1440px)
+      font-size: 14px
     +sm-block()
-      font-size: 14px  
+      font-size: 14px 
+      font-weight: 400 
 
 
